@@ -114,6 +114,7 @@ gtk_source_language_get_type
 <INCLUDE>gtksourceview/gtksourcelanguagemanager.h</INCLUDE>
 GtkSourceLanguageManager
 gtk_source_language_manager_new
+gtk_source_language_manager_get_default
 gtk_source_language_manager_list_languages
 gtk_source_language_manager_get_language_by_id
 gtk_source_language_manager_set_search_path
@@ -171,10 +172,13 @@ gtk_source_style_get_type
 <INCLUDE>gtksourceview/gtksourcestylemanager.h</INCLUDE>
 GtkSourceStyleManager
 gtk_source_style_manager_new
-gtk_source_style_manager_get_scheme
-gtk_source_style_manager_list_schemes
+gtk_source_style_manager_get_default
 gtk_source_style_manager_set_search_path
+gtk_source_style_manager_append_search_path
+gtk_source_style_manager_prepend_search_path
 gtk_source_style_manager_get_search_path
+gtk_source_style_manager_force_rescan
+gtk_source_style_manager_get_scheme
 <SUBSECTION Standard>
 GtkSourceStyleManagerClass
 GTK_IS_SOURCE_STYLE_MANAGER
@@ -194,6 +198,8 @@ GtkSourceStyleManagerPrivate
 GtkSourceStyleScheme
 gtk_source_style_scheme_get_id
 gtk_source_style_scheme_get_name
+gtk_source_style_scheme_get_description
+gtk_source_style_scheme_get_filename
 gtk_source_style_scheme_get_matching_brackets_style
 gtk_source_style_scheme_get_current_line_color
 gtk_source_style_scheme_set_style
