@@ -37,6 +37,14 @@ private members and should not be accessed directly.
 @Returns: 
 
 
+<!-- ##### FUNCTION gtk_source_language_manager_get_default ##### -->
+<para>
+
+</para>
+
+@Returns: 
+
+
 <!-- ##### FUNCTION gtk_source_language_manager_list_languages ##### -->
 <para>
 
