@@ -240,6 +240,24 @@ private members and should not be accessed directly.
 @Returns: 
 
 
+<!-- ##### FUNCTION gtk_source_style_scheme_get_description ##### -->
+<para>
+
+</para>
+
+@scheme: 
+@Returns: 
+
+
+<!-- ##### FUNCTION gtk_source_style_scheme_get_filename ##### -->
+<para>
+
+</para>
+
+@scheme: 
+@Returns: 
+
+
 <!-- ##### FUNCTION gtk_source_style_scheme_get_matching_brackets_style ##### -->
 <para>
 
