@@ -1,3 +1,12 @@
+2007-07-19  Paolo Borelli  <pborelli@katamail.com>
+
+	* docs/reference/gtksourceview-2.0-sections.txt:
+	* gtksourceview/gtksourcestylemanager.c:
+	* gtksourceview/gtksourcestylemanager.h:
+	* gtksourceview/gtksourcelanguagemanager.c:
+
+	Minor API documentation fixes.
+
 2007-07-17  Paolo Maggi  <paolo@gnome.org>
 
 	Implements new gtk_source_language_get_style_ids and
